<resources>
    <string name="app_name">Calculator By Me</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="cancel">C</string>
    <string name="delete">DEL</string>
    <string name="percentage">%</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="point">.</string>
    <string name="equal">=</string>

    <string name="expo">e</string>
    <string name="pi">π</string>
    <string name="ln">ln</string>
    <string name="inverse">1/x</string>
    <string name="log">log</string>
    <string name="power"></string>
    <string name="factorial">x!</string>
    <string name="sine">sin</string>
    <string name="cose">cos</string>

</resources>
